tests/profile/error/keybinding/missing_key.profile
{
  "version": { "major": 12, "minor": 13 },
  "keybindings": [
    {
      "documentation": "T documentation",
      "name": "T name",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
